--- a/test.html
+++ b/test.html
@@ -7,8 +7,44 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <style>
+      body {
+    background: rgb(31,26,53);
+  }
+  h1 {
+    color:white;
+    text-align: center;
+    font-family: Arial;
+    font-weight: bold;
+    font-size: 18px;
+    }
+  h2 {
+    color:white;
+    text-align: center;
+    font-family: Arial;
+    font-weight: noraml;
+    font-size: 13px;
+  }
+  img {
+    border: 0px solid #ffffff;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  a {
+    text-decoration: none;
+  }
+  .btn-outline-primary {
+    color: #ffffff;
+    background-color: transparent;
+    background-image: none;
+    border-color: #ffffff;
+}
 </style>
 </head>
 <body>
+
+
+
+    
 </body>
 </html>
