--- a/test.html
+++ b/test.html
@@ -43,14 +43,14 @@
 </head>
 <body>
 
-    
+
     <div class="container-fluid mt-3">
         <h1>Three equal width columns</h1>
         <p>Note: Try to add a new div with class="col" inside the row class - this will create four equal-width columns.</p>
         <div class="row">
-          <div class="col p-3 bg-primary text-white">.col</div>
-          <div class="col p-3 bg-dark text-white">.col</div>
-          <div class="col p-3 bg-primary text-white">.col</div>
+          <div class="col">.col</div>
+          <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80"></div>
+          <div class="col">.col</div>
         </div>
     </div>
 
