--- a/test.html
+++ b/test.html
@@ -45,13 +45,12 @@
 
 
     <div class="container-fluid mt-3">
-        <h1>Three equal width columns</h1>
-        <p>Note: Try to add a new div with class="col" inside the row class - this will create four equal-width columns.</p>
-        <div class="row">
-          <div class="col">.col</div>
-          <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80"></div>
-          <div class="col">.col</div>
-        </div>
+          <div class="row">
+            <div class="col">.col</div>
+            <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80"></div>
+            <div class="col">.col</div>
+          </div>
+          <h1>Joe Sapletal, GISP</h1>
     </div>
 
 
