--- a/test.html
+++ b/test.html
@@ -55,7 +55,9 @@
     </div>
 
     <a href="https://www.co.dakota.mn.us/"> <img src="images\icons\generic-website.svg" alt="Dakota County" height="30px"/><div class="col"style="margin-top: 8px;"></a>
-
+        <img src="images\icons\instagram.svg" alt="Instagram" height="30px"/>
+        <img src="images\icons\linkedin.svg" alt="LinkedIn" height="30px"/>
+        
     <div class="container-fluid mt-3">
         <div class="row"style="margin-top: 8px;">
           <div class="col">.col</div>
