--- a/test.html
+++ b/test.html
@@ -63,9 +63,9 @@
     </div>
 
     <ul>
-        <li><a href="https://www.co.dakota.mn.us/"> <img src="images\icons\generic-website.svg" alt="Dakota County Website" height="30px"/></li>
-        <li><a href="https://www.instagram.com/jsapletal"> <img src="images\icons\instagram.svg" alt="Dakota County" height="30px"/></li>
-        <li><a href="https://www.linkedin.com/in/joesapletal/"> <img src="images\icons\linkedin.svg" alt="Dakota County" height="30px"/></li>
+        <li><a href="https://www.co.dakota.mn.us/"> <img src="images\icons\generic-website.svg" alt="Dakota County Website" height="30px"/></a></li>
+        <li><a href="https://www.instagram.com/jsapletal"> <img src="images\icons\instagram.svg" alt="Dakota County" height="30px"/></a></li>
+        <li><a href="https://www.linkedin.com/in/joesapletal/"> <img src="images\icons\linkedin.svg" alt="Dakota County" height="30px"/></a></li>
         <li><img src="4.jpg"></li>
         <li><img src="5.jpg"></li>
         <li><img src="6.jpg"></li>
