--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <style>
-      body {
+  body {
     background: rgb(31,26,53);
   }
   h1 {
@@ -46,7 +46,16 @@
     background-color: transparent;
     background-image: none;
     border-color: #ffffff;
-}
+  }
+  .row {
+    display: flex;
+  }
+
+  /* Create three equal columns that sits next to each other */
+  .column {
+    flex: 33.33%;
+    padding: 5px;
+  }
 </style>
 </head>
 <body>
@@ -70,6 +79,18 @@
     <li><img src="5.jpg"></li>
     <li><img src="6.jpg"></li>
 </ul>
+
+<div class="row">
+    <div class="column">
+      <img src="images\icons\generic-website.svg" alt="Snow" style="width:100%">
+    </div>
+    <div class="column">
+      <img src="images\icons\instagram.svg" alt="Forest" style="width:100%">
+    </div>
+    <div class="column">
+      <img src="images\icons\linkedin.svg" alt="Mountains" style="width:100%">
+    </div>
+  </div>
 
     
     
