--- a/test.html
+++ b/test.html
@@ -40,7 +40,7 @@
     border-color: #ffffff;
   }
   .container {
-    width: 210px;  
+    width: 245px;  
   }
   .container img {
     float: left;
@@ -64,37 +64,12 @@
     <div class="container">
         <a href="https://dakotacounty.maps.arcgis.com"><img src="images\icons\generic-map.svg"></a>
         <a href="https://www.co.dakota.mn.us/"><img src="images\icons\generic-website.svg"></a>
-        <img src="images\icons\github.svg">
-        <img src="images\icons\instagram.svg">
-        <img src="images\icons\linkedin.svg">
-        <img src="images\icons\linkedin.svg">
-        <img src="images\icons\x.svg">
+        <a href="https://www.github.com/DCJoeS"><img src="images\icons\github.svg"></a>
+        <a href="https://www.instagram.com/jsapletal"><img src="images\icons\instagram.svg"></a>
+        <a href="https://www.linkedin.com/in/joesapletal/"><img src="images\icons\linkedin.svg"></a>
+        <a href="https://www.openstreetmap.org/user/DCJoeS"><img src="images\icons\linkedin.svg"></a>
+        <a href="https://www.x.com/DCGISJoe"><img src="images\icons\x.svg"></a>
     </div>
-
-<!--
-    <div class="row">
-    <div class="column">
-      <a href="https://dakotacounty.maps.arcgis.com"><img src="images\icons\generic-map.svg" alt="ArcGIS Online" style="width:30px"></a>
-    </div>
-    <div class="column">
-      <a href="https://www.co.dakota.mn.us/"><img src="images\icons\generic-website.svg" alt="Dakota County" style="width:30px"></a>
-    </div>
-    <div class="column">
-      <a href="https://www.github.com/DCJoeS"><img src="images\icons\github.svg" alt="Github" style="width:30px"></a>
-    </div>
-    <div class="column">
-      <a href="https://www.instagram.com/jsapletal"><img src="images\icons\instagram.svg" alt="Instagram" style="width:30px"></a>
-    </div>
-    <div class="column">
-      <a href="https://www.linkedin.com/in/joesapletal/"><img src="images\icons\linkedin.svg" alt="LinkedIn" style="width:30px"></a>
-    </div>
-    <div class="column">
-      <a href="https://www.openstreetmap.org/user/DCJoeS"><img src="images\icons\linkedin.svg" alt="OpenStreetMap" style="width:30px"></a>
-    </div>
-    <div class="column">
-      <a href="https://www.x.com/DCGISJoe"><img src="images\icons\x.svg" alt="X" style="width:30px"></a>
-    </div>
-    </div> -->
 
     
     
